--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                 <div class="cover-wrap">
                   <img
                     src="images/port-img.jpg"
-                    alt="portimg2"
+                    alt="portimg1"
                     width="370"
                     height="294"
                     class="image"
@@ -107,22 +107,23 @@
             </li>
             <!-- Image 1 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-2.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-2.jpg"
+                    alt="portimg2"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Cashless Payment</h2>
                   <p class="type">Marketing</p>
@@ -131,22 +132,23 @@
             </li>
             <!-- Image 2 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-3.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-3.jpg"
+                    alt="portimg3"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Meditation App</h2>
                   <p class="type">App</p>
@@ -155,46 +157,48 @@
             </li>
             <!-- Image 3 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-4.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-4.jpg"
+                    alt="portimg4"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
-                  <h2 class="name">Taxi Service</h2>
+                  <h2 class="name">Tax Service</h2>
                   <p class="type">Marketing</p>
                 </div>
               </a>
             </li>
             <!-- Image 4 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-5.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-5.jpg"
+                    alt="portimg5"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Screen Illustrations</h2>
                   <p class="type">Design</p>
@@ -203,22 +207,23 @@
             </li>
             <!-- Image 5 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-6.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-6.jpg"
+                    alt="portimg6"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Online Courses</h2>
                   <p class="type">Marketing</p>
@@ -227,22 +232,23 @@
             </li>
             <!-- Image 6 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-7.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-7.jpg"
+                    alt="portimg7"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Instagram Stories Concept</h2>
                   <p class="type">Design</p>
@@ -251,49 +257,51 @@
             </li>
             <!-- Image 7 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-8.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-8.jpg"
+                    alt="portimg8"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Organic Food</h2>
-                  <p class="type">Web Site</p>
+                  <p class="type">Website</p>
                 </div>
               </a>
             </li>
             <!-- Image 8 -->
             <li class="project-card">
-              <div class="cover-wrap">
-                <img
-                  src="images/port-img-9.jpg"
-                  alt="portimg2"
-                  width="370"
-                  height="294"
-                  class="image"
-                />
-                <p class="cover-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Saepe nesciunt tempore ipsam sapiente mollitia hic illum
-                  voluptas fuga, sed temporibus dolores, molestias
-                  necessitatibus recusandae, dolorum consequatur similique
-                  veniam voluptate sunt.
-                </p>
-              </div>
+              <a href="" class="project link">
+                <div class="cover-wrap">
+                  <img
+                    src="images/port-img-9.jpg"
+                    alt="portimg9"
+                    width="370"
+                    height="294"
+                    class="image"
+                  />
+                  <p class="cover-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Saepe nesciunt tempore ipsam sapiente mollitia hic illum
+                    voluptas fuga, sed temporibus dolores, molestias
+                    necessitatibus recusandae, dolorum consequatur similique
+                    veniam voluptate sunt.
+                  </p>
+                </div>
                 <div class="substrate">
                   <h2 class="name">Fresh Coffee</h2>
-                  <p class="type">Web Site</p>
+                  <p class="type">Website</p>
                 </div>
               </a>
             </li>
